--- a/version2.tex
+++ b/version2.tex
@@ -99,18 +99,18 @@ Soil hydraulic parameters (SHP), mainly saturated hydraulic conductivity and the
 
 
 
-Due to the rocks that are present and the dense root system of the covering vegetation, and due to the possible extension of the representative elementary volume, it is often impossible to collect undisturbed samples of top-soil for laboratory measurements in order to obtain the saturated hydraulic conductivity and the parameters of the retention curve~\citep{Jacka1}. The SHPs of the top-soil are therefore very difficult to measure directly~\citep{Fodor, Jacka1}. 
+Due to the rocks that are present and the dense root system of the covering vegetation, and due to the possible extension of the representative elementary volume, it is often impossible to collect undisturbed samples of top-soil for laboratory measurements in order to obtain the SHP parameters~\citep{Jacka1}. The SHPs of the top-soil are therefore very difficult to measure directly~\citep{Fodor, Jacka1}. 
 
 
 In our study, the well-known single ring method (SR) was used to obtain experimental input data (cumulative infiltration) for inverse modeling. The  single ring infiltrometer (SR) is a widely accepted, simple, robust field method, which is able to measure infiltration process, which affects the entire soil profile including the top-soil,  and can sample a relatively large volume (depending on the diameter of the ring)~\citep{Cheng,ReynoldsWD}.  The single ring (SR) infiltration experiment is an in situ experiment, which does not require soil samples to be collected, so the porous media is naturally undisturbed. With the widely-used ring diameter of 30~cm, the affected porous media is far more representative than any soil sample  we were able to collect. However, the top-soil can also be measured (with some alteration of the surface) using other well-known field infiltration methods, e.g. the tension infiltrometer or the well permeameter (see \citep{AnguloJaramillo,ReynoldsWDGP}). 
  It should be mentioned here that the ring  infiltration exhibits some of the following issues: 1) air may be entrapped in some pores during rapid flooding of the soil surface inside the ring, 2) the flow geometry and the  initial conditions are not known exactly for the entire profile and 3) the boundary conditions (with the exception of the surface of the ring) are difficult to estimate  \citep{Jacka1,Fodor}.
-Since the flow in a variably saturated porous medium is governed by the Richards equation, where the soil properties are described by SHPs, it is expected that the Richards equation can be used for inverse analysis of the of SHPs the top-soil on the basis of the measured infiltration data. It is apparent that the both unknown saturated and residual water content yield non-unique solution of Richards equation inverse model, the residual water content should be excluded from the identification.
+Since the flow in a variably saturated porous medium is governed by the Richards equation, where the soil properties are described by SHPs, it is expected that the Richards equation can be used for inverse analysis of the of SHPs the top-soil on the basis of the measured unsteady infiltration data. It is apparent that the both unknown saturated and residual water content yield non-unique solution of Richards equation inverse model, the residual water content should be excluded from the identification.
 
 Over the last three decades the Richards equation became challenging topic for many proprietary and opensource projects. 
  One of the most well-known code from the proprietary group is Hydrus~\citep{SimunekJ} and FEFLOW~\citep{feflow}. From the opensource group there has recently formed a large community around the project Open Porous Media~\citep{opm} which includes also the well-known DuMu$^{\textrm{X}}$~\citep{dumux} project. However, in this contribution we made use of another opensource project DRUtES~\citep{drutes}, which includes features for efficient solutions of problems with progressive breakthrough (such as the moving wetting front) based on domain decomposition techniques, for details see~\citep{mojecomp, mojejcam2, mojeamc2}.
 
 
- Several studies have compared inverse modeling and tension infiltrometers (see e.g. \citep{Verbist, Simunek1, Ventrella, Schwartz, Ramos, Simunek2}). It states that the retention curves obtained from the inverse modeling of the Richards equation using tension infiltrometer data are often not in good agreement with laboratory experiments on undisturbed samples (see e.g. \citep{rezaei}). In particular, the saturated water content obtained from an inverse model based on  the Richards equation is typically distinctly lower than the experimentally established value (see e.g.~\citep{Simunek1, Verbist}). This could be due to the following effects: the effect of hysteresis as a drying process in the laboratory differs from the wetting process in the field; the effect of entrapped air in the field (see e.g.~\citep{Fodor}), where the saturation may not fully correspond the pressure head, and an effect of macropores, which are excluded when a tension infiltrometer is used. An most importantly the soil samples, which are usually  examined in the laboratory, are typically much smaller than the representative elementary volume~\citep{scharnagl}.
+ Several studies have compared inverse modeling and tension infiltrometers (see e.g. \citep{Verbist, Simunek1, Ventrella, Schwartz, Ramos, Simunek2}). It states that the retention curves obtained from the inverse modeling of the Richards equation using tension infiltrometer data are often not in good agreement with laboratory experiments on undisturbed samples (see e.g. \citep{rezaei}). In particular, the saturated water content obtained from an inverse model based on  the Richards equation is typically distinctly lower than the experimentally established value (see e.g.~\citep{Simunek1, Verbist}). This could be due to the following effects: the effect of hysteresis as a drying process in the laboratory differs from the wetting process in the field; the effect of entrapped air in the field (see e.g.~\citep{Fodor}), where the saturation may not fully correspond the pressure head, and an effect of macropores, which are excluded when a tension infiltrometer is used. Most importantly the soil samples, which are usually  examined in the laboratory, are typically much smaller than the representative elementary volume~\citep{scharnagl}.
  However, it should be mentioned here that a few studies have reported a close correspondence between the retention curve parameters obtained from laboratory experiments and from the Richards equation based inverse model (see e.g.\citep{Ramos} or~\citep{Schwartz}).
 
 The non-uniqueness of the Richards equation based inverse model was studied by \citep{beven2003-uncertain}. It was demonstrated on real world case study of Sherwood Sandstone Aquifer that many different SHP parameters of macroscopic media representing the layered  unsaturated zone provided acceptable simulations of the observed aquifer recharges. However, in this work 
@@ -195,13 +195,13 @@ In this work, the SHPs are considered to be the following:
 \item Specific storage $S_s$~[$L^{-1}$] -- represents the linear elasticity of the porous medium. The specific storage in the unsaturated zone is often neglected. However, the effect of the elasticity of the top-soil during the infiltration experiment, which is typical with an abrupt development of hydraulic pressure, should also be included.
 \end{itemize}
 
-An evaluation of these parameters for the soil profile for each horizon given in section~\ref{site} will be discussed here. The focus will be given on the top soil layer, where this set of parameters will be identified here by  inverse analysis. The SHPs parameters of the lower layers will be obtained here using standard field experiments  and Rosetta pedotransfer functions.
+An evaluation of these parameters is the scope of this work. The focus will be given on the top soil layer, where this set of parameters will be identified  by  inverse analysis. The SHPs parameters of the lower layers will be obtained here using Guelph permeameter (GP) measurements and Rosetta pedotransfer functions~\citep{Schaap}.
 
 
 \subsubsection{Obtaining SHP parameters for lower horizons}
 \label{dolni}
 
-Guelph permeameter measurement (GP) was used for estimating the saturated hydraulic conductivity of the lower horizons. When evaluating horizon E, the measurements were performed in wells ranging in depth between 19~cm  and 26~cm. For the spodic horizon the depth of the measurement wells ranged between 30~cm  and 56~cm. The constant head GP method applied here is described in~\citep{Jacka1}.
+Guelph permeameter measurements (GP) were used for estimating the saturated hydraulic conductivity of the lower horizons. When evaluating horizon E, the measurements were performed in wells with depth ranging between 19~cm  and 26~cm. For the spodic horizon the depth of the measurement wells ranged between 30~cm  and 56~cm. The constant head GP method applied here is described in~\citep{Jacka1}.
 
 A total of 28 GP experiments were conducted to estimate the saturated hydraulic conductivity of the E horizon. 
  The representative saturated hydraulic conductivity for the E horizon was evaluated as 4.0$\times 10^{-6}$~m.s$^{-1}$.
@@ -264,13 +264,13 @@ In brief, the experimental setup was as follows. A steel ring 30~cm in inner dia
 
 A total of 22 SR experiments were conducted on the site. Statistical description of these infiltration data is given by~\citep{jacka-site}, see datasets collected on site 3. The experiments were evaluated as follows. In order to eliminate noise from the experimental values, each SR experiment data set was smoothed. It was observed that the Schwarzendruber analytical model of one-dimensional infiltration exhibited an excellent fitting quality, with the mean  Nash-Sutcliffe model efficiency coefficient value estimated as 0.9974. Thus we made use of  exponential data smoothing here. The Schwarzendruber equation for cumulative infiltration  states that
 \begin{lineq}
-I(t)=\frac{\bar{S}\left(1-\exp\left(-A_0\sqrt{t}\right)\right)}{A_0}+\bar{K}_{s}t,
+I(t)=\frac{c_0\left(1-\exp\left(-c_1\sqrt{t}\right)\right)}{c_1}+c_2t,
 \label{vyhlaz}
 \end{lineq}
-where $I$ is the cumulative infiltration [$L$], and where the parameter set $A_0$, $\bar{S}$, $\bar{K}_{s}$ is usually expressed in terms of SHPs. This physically based interpretation of the Schwarzendruber parameters is disregarded here, because our infiltration model does not meet the prerequisites for the Schwarzendruber model. The Schwarzendruber model was  considered here as some exponential smoothing function only without any physically  based interpretation.
+where $I$ is the cumulative infiltration [$L$], and where the parameter set $c_{0,1,2}$, is usually expressed in terms of SHPs. This physically based interpretation of the Schwarzendruber parameters is disregarded here, because our infiltration model does not meet the prerequisites for the Schwarzendruber model. The Schwarzendruber model was  considered here as some exponential smoothing function only without any physically  based interpretation.
 
 
-According to the normality tests,  all three datasets of  parameters $A_0$, $\bar{S}$, $\bar{K}_{s}$ can be well approximated  using a log-normal distribution. The geometric mean is therefore suitable for estimating representative values of these parameters. Representative values are as follows: $\bar{K}_s = 5.16\times 10^{-6}$~m.s$^{-1}$, $\bar{S} = 8.55\times 10^{-4}$~m.s$^{-0.5}$, and $A_0 = 0.1132$~[-]. The evaluated representative  parameter set, together with  model~\eqref{vyhlaz}, will be used as an input curve for identifying the top soil hydraulic parameters (SHP). SHPs of the lower horizons were estimated from direct measurements, as will be described in the next section.
+According to the normality tests,  all three datasets of $c_{0,1,2}$ parameters can be well approximated  using a log-normal distribution. The geometric mean is therefore suitable for estimating representative values of these parameters. Representative values are as follows: $c_0 = 8.55\times 10^{-4}$~m.s$^{-0.5}$, $c_1 = 0.1132$~[-], and $c_2 = 5.16\times 10^{-6}$~m.s$^{-1}$. The evaluated representative  parameter set, together with  model~\eqref{vyhlaz}, will be used here as an input curve for identifying the top soil hydraulic parameters (SHP). SHPs of the lower horizons were estimated from direct measurements, as will be described in the next section.
 
 
 
