ready until results

--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -1612,3 +1612,104 @@ year = {1990},
  publisher = {??},
  size = {??},
 }
+@article{simunek-infiltr2shp,
+title = "Simultaneous estimation of soil hydraulic and solute transport parameters from transient infiltration experiments",
+journal = "Advances in Water Resources",
+volume = "23",
+number = "7",
+pages = "677 - 688",
+year = "2000",
+issn = "0309-1708",
+doi = "https://doi.org/10.1016/S0309-1708(00)00011-7",
+url = "http://www.sciencedirect.com/science/article/pii/S0309170800000117",
+author = "M. Inoue and J. \v{S}im\o{u}nek and S. Shiozawa and J.W. Hopmans",
+keywords = "Four-electrode sensor",
+keywords = "Bulk soil electrical conductivity",
+keywords = "Hydraulic conductivity",
+keywords = "Soil water retention curve",
+keywords = "Dispersivity"
+}
+
+@article{infiltr2shp,
+title = "Beerkan Estimation of Soil Transfer Parameters through Infiltration Experiments--BEST",
+journal = "Soil Science Society of America Journal",
+volume = "70",
+number = "7",
+pages = "521 - 532",
+year = "2006",
+doi = "http://dx.doi.org/10.2136/sssaj2005.0026",
+author = "Lassabatère, L. and  Angulo-Jaramillo, R. and  Soria Ugalde, J. M. and Cuenca, R. and Braud, I. and Haverkamp, R.",
+}
+
+@Article{hess-Younes-2017,
+AUTHOR = {Younes, A. and Mara, T. and Fahs, M. and Grunberger, O. and Ackerer, P.},
+TITLE = {Hydraulic and transport parameter assessment using column infiltration
+experiments},
+JOURNAL = {Hydrology and Earth System Sciences},
+VOLUME = {21},
+YEAR = {2017},
+NUMBER = {5},
+PAGES = {2263--2275},
+URL = {https://www.hydrol-earth-syst-sci.net/21/2263/2017/},
+DOI = {10.5194/hess-21-2263-2017}
+}
+
+@article{simunek2-infiltr2shp,
+title = "Inverse Dual-Permeability Modeling of Preferential Water Flow in a Soil Column and Implications for Field-Scale Solute Transport",
+journal = "Vadose zone journal",
+volume = "5",
+number = "1",
+pages = "59 - 76",
+year = "2006",
+doi = "http://dx.doi.org/10.2136/vzj2005.0008",
+author = "Kohne, J.M. and Mohanty, B.P. and Simunek, J.",
+}
+
+@article{BAGARELLO201770,
+title = "Estimating saturated soil hydraulic conductivity by the near steady-state phase of a Beerkan infiltration test",
+journal = "Geoderma",
+volume = "303",
+number = "Supplement C",
+pages = "70 - 77",
+year = "2017",
+issn = "0016-7061",
+doi = "https://doi.org/10.1016/j.geoderma.2017.04.030",
+url = "http://www.sciencedirect.com/science/article/pii/S001670611730201X",
+author = "V. Bagarello and S. Di Prima and M. Iovino",
+keywords = "Saturated soil hydraulic conductivity",
+keywords = "Beerkan infiltration run",
+keywords = "Field methods",
+keywords = "Steady-state infiltration"
+}
+
+@article{XU201234,
+title = "Analysis of single-ring infiltrometer data for soil hydraulic properties estimation: Comparison of BEST and Wu methods",
+journal = "Agricultural Water Management",
+volume = "107",
+number = "Supplement C",
+pages = "34 - 41",
+year = "2012",
+issn = "0378-3774",
+doi = "https://doi.org/10.1016/j.agwat.2012.01.004",
+url = "http://www.sciencedirect.com/science/article/pii/S0378377412000200",
+author = "X. Xu and C. Lewis and W. Liu and J.D. Albertson and G. Kiely",
+keywords = "Soil hydraulic conductivity",
+keywords = "Soil water retention",
+keywords = "Infiltration"
+}
+
+@Article{Knobloch2008,
+author="Knobloch, Petr",
+title="On the choice of the SUPG parameter at outflow boundary layers",
+journal="Advances in Computational Mathematics",
+year="2008",
+month="Apr",
+day="26",
+volume="31",
+number="4",
+pages="369",
+abstract="We consider the Streamline upwind/Petrov--Galerkin (SUPG) finite element method for two--dimensional steady scalar convection--diffusion equations and propose a new definition of the SUPG stabilization parameter along outflow Dirichlet boundaries. Numerical results demonstrate a significant improvement of the accuracy and show that, in some cases, even nodally exact solutions are obtained.",
+issn="1572-9044",
+doi="10.1007/s10444-008-9075-6",
+url="https://doi.org/10.1007/s10444-008-9075-6"
+}
