--- a/version2.tex
+++ b/version2.tex
@@ -112,6 +112,7 @@ Over the last three decades the Richards equation became challenging topic for m
 
  Several studies have compared inverse modeling and tension infiltrometers (see e.g. \citep{Verbist, Simunek1, Ventrella, Schwartz, Ramos, Simunek2}). It states that the retention curves obtained from the inverse modeling of the Richards equation using tension infiltrometer data are often not in good agreement with laboratory experiments on undisturbed samples (see e.g. \citep{rezaei}). In particular, the saturated water content obtained from an inverse model based on  the Richards equation is typically distinctly lower than the experimentally established value (see e.g.~\citep{Simunek1, Verbist}). This could be due to the following effects: the effect of hysteresis as a drying process in the laboratory differs from the wetting process in the field; the effect of entrapped air in the field (see e.g.~\citep{Fodor}), where the saturation may not fully correspond the pressure head, and an effect of macropores, which are excluded when a tension infiltrometer is used. Most importantly the soil samples, which are usually  examined in the laboratory, are typically much smaller than the representative elementary volume~\citep{scharnagl}.
  However, it should be mentioned here that a few studies have reported a close correspondence between the retention curve parameters obtained from laboratory experiments and from the Richards equation based inverse model (see e.g.\citep{Ramos} or~\citep{Schwartz}).
+An identification of SHP parameters from transient infiltration experiment was a subject of numerous publications in past decades already, (see e.g. \citep{simunek-infiltr2shp, infiltr2shp, simunek2-infiltr2shp, XU201234, BAGARELLO201770,  hess-Younes-2017}.  \cite{simunek-infiltr2shp} already reported a close correspondence between the SHP parameters obtained from the inverse modeling of dynamic transient infiltration experiment with those obtained from steady-state laboratory experiment, where the uniqueness of the inverse model was preserved by coupling the dynamically changing pressure head, water content and even tracer concentration.
 
 The non-uniqueness of the Richards equation based inverse model was studied by \citep{beven2003-uncertain}. It was demonstrated on real world case study of Sherwood Sandstone Aquifer that many different SHP parameters of macroscopic media representing the layered  unsaturated zone provided acceptable simulations of the observed aquifer recharges. However, in this work 
 the non-unique definition with the unknown residual and saturated water content was considered.
@@ -314,7 +315,7 @@ c(\vec{x}) = \begin{cases}
 	     \frac{1}{r}K(h) , \quad &\forall \vec{x} \in \Omega_{outer}.
 	    \end{cases}
 \end{lineq}
-Note that  the flow boundary should not be coincident with the axis of rotation symmetry ($r>0$). Moreover, using the standard finite element method approximation, $r$ should even be sufficiently greater than zero (depending on your mesh discretization) to prevent convective dominance. The constitutive relation $\theta(h)$ was substituted by the van Genuchten law~\citep{vangenuchten}, and the constitutive relation $K(h)$ was supplied by the Mualem law~\citep{mualem}.
+Note that  the flow boundary should not be identical with the axis of rotation symmetry ($r>0$). Moreover, using the standard finite element method approximation, $r$ should even be sufficiently greater than zero (depending on your mesh discretization) to prevent convective dominance (details explained in section~\ref{bccond}). The constitutive relation $\theta(h)$ was substituted by the van Genuchten law~\citep{vangenuchten}, and the constitutive relation $K(h)$ was supplied by the Mualem law~\citep{mualem}.
 
 
 
@@ -337,12 +338,18 @@ The computational domain is depicted in figure~\ref{valec} together with the dis
 \item the free drainage boundary (Neumann)
 \item the groundwater level - zero pressure head (Dirichlet)
 \end{itemize}
-It is apparent that the wetting front originating from our infiltration experiment affects the soil column only to a certain depth. Defining the Neumann no-flow boundary at a sufficient depth would therefore probably not have a significant effect on the derivative of the solution of \eqref{richaxi} at the top boundary. At the same time, the no-flow boundary is physically incorrect, so this option was rejected. The second option -- the free drainage boundary -- would be completely incorrect here. The free drainage boundary defines fluxes that probably do not appear in our system at all. Above all, if we consider here the initial condition  as a steady state ($\frac{\partial h}{\partial z} = -1$), then the free drainage boundary condition is incompatible with the initial condition, which is again physically incorrect. It turns out that the only physically correct boundary condition for the bottom boundary is the Dirichlet boundary, which represents the groundwater table. The average depth of the groundwater table was known, it is -280~cm below the surface. However, with this particular setup the domain became extremely narrow and deep. However, since the solution at greater depths
-is not crucial for estimating the cumulative infiltration we can use coarser  discretization there. Further, if we apply the   adaptive domain decomposition algorithm ($dd$-adaptivity), see~\citep{mojecomp, mojejcam2, mojeamc2},  the non-active parts of the computational domain are sequentially activated and deactivated, and then our current domain extension does not have a significant effect on the computational speed.
+It is apparent that the wetting front originating from our infiltration experiment affects the soil column only to a certain depth. Defining the Neumann no-flow boundary at a sufficient depth would therefore probably not have a significant effect on the derivative of the solution of \eqref{richaxi} at the top boundary. At the same time, the no-flow boundary is physically incorrect, so this option was rejected. The second option -- the free drainage boundary -- would be completely incorrect here. The free drainage boundary defines fluxes that probably do not appear in our system at all. Above all, if we consider here the initial condition  as a hydrostatic state, and so \begin{lineq} \frac{\partial h}{\partial z}(x) = -1, \quad \forall x \in \Omega .\end{lineq} The free drainage boundary condition, which is defined as
+\begin{lineq}
+\frac{\partial h}{\partial \vec{n}}(x) = 0, \quad \forall (x,t) \in \Gamma_{\mbox{free drainage}} \times [0,T).
+\end{lineq}
+is in a conflict with the initial condition (since $\vec{n} = \left(\begin{smallmatrix} 0 \\ 1 \end{smallmatrix} \right)$), which is again physically incorrect, and produces further computational costs. The reason for the extra computational costs is that the nonlinear equation solver iterates on the bottom boundary, which is in an ideal case out of the reach of the infiltration experiment, and naturaly there is no physical process taking place in the initial time levels. The computational process, that is produced on the bottom boundary in the initial time levels with such boundary setup, originates from the initial and boundary condition mismatch. 
+
+It turns out that the only physically correct boundary condition for the bottom boundary is the Dirichlet boundary, which represents the groundwater table. The average depth of the groundwater table was known, it is approximately -280~cm below the surface. However, with this particular setup the domain became extremely narrow and deep. However, since the solution at greater depths
+is not crucial for estimating the cumulative infiltration we can use coarser  discretization there. Further, if we apply the   adaptive domain decomposition algorithm ($dd$-adaptivity), see~\citep{mojecomp, mojejcam2, mojeamc2},  the non-active parts of the computational domain are sequentially activated and deactivated, and then our current domain extension does not have a significant effect on the computational speed, but our domain  description is consistent with the real physical porous medium system.
 
 %^konec pred obedem
 
-The left hand side domain boundary should be located at a sufficient distance from the axis of anisotropy, because of the term $\frac{1}{r}$ in \eqref{convect}. The Peclet number, representing the numerical stability of convection-diffusion problems is in our case given as follows
+The left hand side domain boundary should be located at a sufficient distance from the axis of anisotropy, because of the term $\frac{1}{r}$ in \eqref{convect}. The Peclet number representing the numerical stability of convection-diffusion problems (see e.g. \citep{Knobloch2008}) is in our case given as follows
 \begin{lineq}
 Pe = \frac{\frac{\partial h}{\partial r} \Delta x}{2r},
 \end{lineq}
@@ -381,7 +388,7 @@ and thus $\frac{\partial h}{\partial z} = -1$.
 \subsubsection{Numerical solution, temporal and spatial discretization, automatic calibration methodology}%[michal]
 \label{trapoty}
 
-Equation~\eqref{richaxi} was implemented into DRUtES library~\citep{drutes, mojeamc}. This is an object-oriented library written in Fortran 2003/2008 standard for solving nonlinear coupled convection-diffusion-reaction type problems. The problem was approximated by the linear finite element method for spatial derivatives and Rothe's method for temporal derivatives. The nonlinear operator was treated with the Schwarz-Picard method -- an adaptive domain decomposition  ($dd$-adaptivity) -- with the ability to activate and deactivate subregions of the computational domain sequentially, see works~\citep{mojecomp, mojejcam2, mojeamc2}).
+Equation~\eqref{richaxi} was implemented into DRUtES library~\citep{drutes}. This is an object-oriented library written in Fortran 2003/2008 standard for solving nonlinear coupled convection-diffusion-reaction type problems. The problem was approximated by the linear finite element method for spatial derivatives and Rothe's method for temporal derivatives. The nonlinear operator was treated with the Schwarz-Picard method -- an adaptive domain decomposition  ($dd$-adaptivity) -- with the ability to activate and deactivate subregions of the computational domain sequentially, see works~\citep{mojecomp, mojejcam2, mojeamc2}).
 
 
 
@@ -395,19 +402,19 @@ Equation~\eqref{richaxi} was implemented into DRUtES library~\citep{drutes, moje
 \end{lineq}
 where $k$ denotes the iteration level, and $l$ denotes the time level, until \begin{lineq} \label{picard} ||\vec{x}_l^{k+1} - \vec{x}_l^k||_2 < \varepsilon , \end{lineq} where $\varepsilon$ is the desired iteration criterion.
 
-If the nonlinear problem is treated as 
+If we accept any arbitrary value of $\varepsilon$, the nonlinear problem is then treated as 
 \begin{lineq}
 \label{matice2}
 \mathbf{A}(\vec{x}_{l-1}) \vec{x}_l = \vec{b}(\vec{x}_{l-1}),
 \end{lineq}
- we have introduced a kind of semiexplicit approximation  
-of~\eqref{richaxi}. The method~\eqref{matice} degenerates into~\eqref{matice2} if the error criterion $\varepsilon$ was taken from the extended real numbers, $\varepsilon \in {\overline {\mathbb {R} }}$, and $\varepsilon = + \infty$. It is apparent that for short time stepping the method converges to the exact solution. But for the inappropriate time stepping, the method is less accurate, but is also free of possible issues related to the convergence of the nonlinear operator.
+ which is a kind of semiexplicit approximation  
+of~\eqref{richaxi}. The method~\eqref{matice} degenerates into~\eqref{matice2} if the error criterion $\varepsilon$ was taken from the extended real numbers, $\varepsilon \in {\overline {\mathbb {R} }}$, and assigned as $\varepsilon = + \infty$. It is apparent that for short time stepping the method converges to the exact solution. But for the inappropriate time stepping, the method is less accurate, but is also free of possible issues related to the convergence of the nonlinear operator.
 
 Since the infiltration flux is obtained from the numerical derivative of the solution of \eqref{richaxi},  and since it is well known that inaccurate approximation of the capacity term (time derivative term) yields inaccurate mass properties~\citep{celia}, we are aware of a possible impact of spatial and temporal discretization on the identified SHP values. But we are also aware of possible difficulties with convergence of the linearized discrete system~\eqref{matice} for certain combinations of SHPs values within the ranges given in table~\ref{rozsahy} during the automatic calibration, as discussed in~\cite{beven2003-uncertain}.
 And thus the following methodology for the automatic calibration was proposed here.
 
 \begin{enumerate}[label=({\bf \roman*})]
-\item Proceed the calibration procedure with the quasi-explicit stable numerical technique for treating the nonlinear operator explained in equation~\eqref{matice2}, with the initial time step $t_{init}= 10^{-6}$~hrs, and for each subsequent time level $l$, $\Delta t_l = 1.05 \Delta t_{l-1}$, where $l=\{1,n_t\}$, where $n_t$ is the number of time levels used for the temporal discretization; the $dd$-adaptivity algorithm wasn't used at this step. The ranges of parameters for this calibration are given in table~\ref{rozsahy}, so the maximal values of SHP are defined as a vector $\vec{p}^{r_f}_{max}$, and the minimal values are defined as a vector $\vec{p}^{r_f}_{min}$. The spatial discretization for this step of calibration was given in the beginning of this section -- 2097 nodes and 3861 elements. 
+\item Proceed the calibration procedure with the quasi-explicit stable numerical technique for treating the nonlinear operator explained in equation~\eqref{matice2}, with the initial time step $t_{init}= 10^{-6}$~hrs, and for each subsequent time level $l$, $\Delta t_l = 1.05 \Delta t_{l-1}$, where $l=\{1,n_t\}$, where $n_t$ is the number of time levels used for the temporal discretization. The ranges of parameters for this calibration are given in table~\ref{rozsahy}, so the maximal values of SHP are defined as a vector $\vec{p}^{r_f}_{max}$, and the minimal values are defined as a vector $\vec{p}^{r_f}_{min}$. The spatial discretization for this step of calibration was given in the beginning of this section -- 2097 nodes and 3861 elements. 
 Let us assume that this discretization is given by a mesh density function ${\Delta}(\vec{x})^{r_f}$. The function $\Delta(\vec{x})^{r_f}$ is understood as a spatial distribution of mesh size density, which was used as an input for the mesh generator T3D~\citep{t3d}. The superscript $r_f$ defines the refinement level, where $r_f=0$ at this particular stage, and the vector $\vec{x}$ refers to spatial coordinates inside the domain $\Omega$.
 \item Let us pressume that this inverse model will have more than just a single solution, this is an assumption of multimodality, which is based on~\citep{beven2003-uncertain}. \begin{itemize} \item Then this calibration will generate vectors of SHPs values $\vec{p}^{i_e}_{r_f}$, where the superscript $i_e=\{1,...,n_e\}$, where $n_e$     denotes the number of  local extremes. \end{itemize} 
 \item To validate the inverse modeling results, select physically acceptable local extremes with good fitting qualities, and create a scatter plot of the objective function in its neighborhood  with improved temporal integration and spatial discretization. Increase the discretization level \begin{lineq} r_f=r_f+1.\end{lineq} Then the following updates will apply
@@ -492,7 +499,7 @@ This could be understood as a local criterion.
 \label{objektiva3}
 \Psi_3 (\vec{p}) =  \sqrt{\left( \frac{\dd \bar{I}(\vec{p},T_{end})}{\dd t} - \frac{\dd I(T_{end})}{\dd t} \right)^2}.
 \end{lineq}
-This could also be understood as a local criterion.
+This could also be again understood as a local criterion.
 
 \end{enumerate}
 And so we have applied here a multi-objective optimization. However, it is apparent that minimizing the objective function~\eqref{objektiva1} also minimizes the objective functions~\eqref{objektiva2} and  \eqref{objektiva3}. The aim of this multi-objective definition was improving the conditioning of this inverse problem. If we considered the objective function~\eqref{objektiva1} only, then we were probably able to obtain the same solution as with this multi-objective definition with slower convergence of optimization procedure only (the selection of the optimization algorithm will be explained in the following section~\ref{optima}). This multi-objective function definition is based on experience from our previous attempts in inverse analyses of this infiltration problem.
