waiting for results, see you in ten days :)

--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -1713,3 +1713,59 @@ issn="1572-9044",
 doi="10.1007/s10444-008-9075-6",
 url="https://doi.org/10.1007/s10444-008-9075-6"
 }
+
+@article{bellman1970,
+title = "On structural identifiability",
+journal = "Mathematical Biosciences",
+volume = "7",
+number = "3",
+pages = "329 - 339",
+year = "1970",
+issn = "0025-5564",
+doi = "https://doi.org/10.1016/0025-5564(70)90132-X",
+url = "http://www.sciencedirect.com/science/article/pii/002555647090132X",
+author = "R. Bellman and K.J. Åström"
+}
+
+@article{mous1993,
+title = "Identification of the movement of water in unsaturated soils: the problem of identifiability of the model",
+journal = "Journal of Hydrology",
+volume = "143",
+number = "1",
+pages = "153 - 167",
+year = "1993",
+note = "XVI General Assembly of the European Geophysical Society",
+issn = "0022-1694",
+doi = "https://doi.org/10.1016/0022-1694(93)90093-O",
+url = "http://www.sciencedirect.com/science/article/pii/002216949390093O",
+author = "S.L.J. Mous"
+}
+
+@article{kool1985,
+title = "Determining soil hydraulic properties from one-step outflow experiments by parameter estimation. I. Theory and numerical studies",
+journal = "Soil Science Society of America",
+volume = "49",
+pages = "1348 - 1354",
+year = "1985",
+author = "Kool, J.B. and Parker, J.C. and Van Genuchten, M.T."
+}
+
+@article{ihlwang2003,
+title = "Estimating unique soil hydraulic parameters for sandy media from multi-step outflow experiments",
+journal = "Advances in Water Resources",
+volume = "26",
+number = "4",
+pages = "445 - 456",
+year = "2003",
+issn = "0309-1708",
+doi = "https://doi.org/10.1016/S0309-1708(02)00107-0",
+url = "http://www.sciencedirect.com/science/article/pii/S0309170802001070",
+author = "Sang Il Hwang and Susan E Powers",
+keywords = "Multi-step outflow experiment",
+keywords = "Sandy soil",
+keywords = "Unique soil hydraulic parameters",
+keywords = "Boundary conditions",
+keywords = "Lognormal distribution–Mualem (LDM) function",
+keywords = "Capillary pressure curve",
+keywords = "Relative permeability curve"
+}
