--- a/version2.tex
+++ b/version2.tex
@@ -54,7 +54,7 @@
 
 %opening
 
-\usepackage[table]{xcolor} 
+% \usepackage[table]{xcolor} 
 
 \begin{document}
 
@@ -104,17 +104,18 @@ Due to the rocks that are present and the dense root system of the covering vege
 
 In our study, the well-known single ring method (SR) was used to obtain experimental input data (cumulative infiltration) for inverse modeling. The  single ring infiltrometer (SR) is a widely accepted, simple, robust field method, which is able to measure infiltration process, which affects the entire soil profile including the top-soil,  and can sample a relatively large volume (depending on the diameter of the ring)~\citep{Cheng,ReynoldsWD}.  The single ring (SR) infiltration experiment is an in situ experiment, which does not require soil samples to be collected, so the porous media is naturally undisturbed. With the widely-used ring diameter of 30~cm, the affected porous media is far more representative than any soil sample  we were able to collect. However, the top-soil can also be measured (with some alteration of the surface) using other well-known field infiltration methods, e.g. the tension infiltrometer or the well permeameter (see \citep{AnguloJaramillo,ReynoldsWDGP}). 
  It should be mentioned here that the ring  infiltration exhibits some of the following issues: 1) air may be entrapped in some pores during rapid flooding of the soil surface inside the ring, 2) the flow geometry and the  initial conditions are not known exactly for the entire profile and 3) the boundary conditions (with the exception of the surface of the ring) are difficult to estimate  \citep{Jacka1,Fodor}.
-Since the flow in a variably saturated porous medium is governed by the Richards equation, where the soil properties are described by SHPs, it is expected that the Richards equation can be used for inverse analysis of the of SHPs the top-soil on the basis of the measured unsteady infiltration data. It is apparent that the both unknown saturated and residual water content yield non-unique solution of Richards equation inverse model, the residual water content should be excluded from the identification.
+Since the flow in a variably saturated porous medium is governed by the Richards equation, where the soil properties are described by SHPs, it is expected that the Richards equation can be used for inverse analysis of the of SHPs the top-soil on the basis of the measured unsteady infiltration data. It is apparent that the both unknown saturated and residual water content in case of an absence of the water content experimental data yields non-unique solution of Richards equation inverse model, the residual water content should be excluded from the identification, see~\citep{mous1993}.
 
 Over the last three decades the Richards equation became challenging topic for many proprietary and opensource projects. 
- One of the most well-known code from the proprietary group is Hydrus~\citep{SimunekJ} and FEFLOW~\citep{feflow}. From the opensource group there has recently formed a large community around the project Open Porous Media~\citep{opm} which includes also the well-known DuMu$^{\textrm{X}}$~\citep{dumux} project. However, in this contribution we made use of another opensource project DRUtES~\citep{drutes}, which includes features for efficient solutions of problems with progressive breakthrough (such as the moving wetting front) based on domain decomposition techniques, for details see~\citep{mojecomp, mojejcam2, mojeamc2}.
+ One of the most well-known code from the proprietary group is Hydrus~\citep{SimunekJ} and FEFLOW~\citep{feflow}. From the opensource group there is recently forming  a  community around the project Open Porous Media~\citep{opm}. However, in this contribution we made use of another opensource project DRUtES~\citep{drutes}, which includes features for efficient solutions of problems with progressive breakthrough (such as the moving wetting front) based on domain decomposition techniques, for details see~\citep{mojecomp, mojejcam2, mojeamc2}. It is our in-house code and its development forms a  part of author's research contributions.  
 
 
  Several studies have compared inverse modeling and tension infiltrometers (see e.g. \citep{Verbist, Simunek1, Ventrella, Schwartz, Ramos, Simunek2}). It states that the retention curves obtained from the inverse modeling of the Richards equation using tension infiltrometer data are often not in good agreement with laboratory experiments on undisturbed samples (see e.g. \citep{rezaei}). In particular, the saturated water content obtained from an inverse model based on  the Richards equation is typically distinctly lower than the experimentally established value (see e.g.~\citep{Simunek1, Verbist}). This could be due to the following effects: the effect of hysteresis as a drying process in the laboratory differs from the wetting process in the field; the effect of entrapped air in the field (see e.g.~\citep{Fodor}), where the saturation may not fully correspond the pressure head, and an effect of macropores, which are excluded when a tension infiltrometer is used. Most importantly the soil samples, which are usually  examined in the laboratory, are typically much smaller than the representative elementary volume~\citep{scharnagl}.
  However, it should be mentioned here that a few studies have reported a close correspondence between the retention curve parameters obtained from laboratory experiments and from the Richards equation based inverse model (see e.g.\citep{Ramos} or~\citep{Schwartz}).
 An identification of SHP parameters from transient infiltration experiment was a subject of numerous publications in past decades already, (see e.g. \citep{simunek-infiltr2shp, infiltr2shp, simunek2-infiltr2shp, XU201234, BAGARELLO201770,  hess-Younes-2017}.  \cite{simunek-infiltr2shp} already reported a close correspondence between the SHP parameters obtained from the inverse modeling of dynamic transient infiltration experiment with those obtained from steady-state laboratory experiment, where the uniqueness of the inverse model was preserved by coupling the dynamically changing pressure head, water content and even tracer concentration.
 
-The non-uniqueness of the Richards equation based inverse model was studied by \citep{beven2003-uncertain}. It was demonstrated on real world case study of Sherwood Sandstone Aquifer that many different SHP parameters of macroscopic media representing the layered  unsaturated zone provided acceptable simulations of the observed aquifer recharges. However, in this work 
+The non-uniqueness of the Richards equation inverse model is already a very well-known issue, and has been described by a number of publications over the last decades see e.g.~\citep{kool1985, mous1993, ihlwang2003, beven2003-uncertain}. However, we have not succeeded in our search for more recent contributions in this field. \cite{mous1993} defined criteria for model identifiability based on the sensitivity matrix rank, however numerical computation of sensitivity matrix often involves difficulties in maintaining truncation and round-off errors.
+\cite{beven2003-uncertain} demonstrated on real world case study of Sherwood Sandstone Aquifer that many different SHP parameters of macroscopic media representing the layered  unsaturated zone provided acceptable simulations of the observed aquifer recharges. However, in this work 
 the non-unique definition with the unknown residual and saturated water content was considered.
 The definition of unique inverse function for identification of macroscopic media was treated in~\citep{zou200126}, where the recommended approach was to assemble the objective function from transient data of the capillary pressure and from the steady state water content data. Another issue is the equifinality in the mathematical model setup in terms of the initial and boundary condition data, this problem was studied by~\citep{klaus-hydrol}.
 
@@ -272,6 +273,8 @@ where $I$ is the cumulative infiltration [$L$], and where the parameter set $c_{
 
 
 According to the normality tests,  all three datasets of $c_{0,1,2}$ parameters can be well approximated  using a log-normal distribution. The geometric mean is therefore suitable for estimating representative values of these parameters. Representative values are as follows: $c_0 = 8.55\times 10^{-4}$~m.s$^{-0.5}$, $c_1 = 0.1132$~[-], and $c_2 = 5.16\times 10^{-6}$~m.s$^{-1}$. The evaluated representative  parameter set, together with  model~\eqref{vyhlaz}, will be used here as an input curve for identifying the top soil hydraulic parameters (SHP). SHPs of the lower horizons were estimated from direct measurements, as will be described in the next section.
+
+It is already apparent at this moment, that if the infiltration experiment can be so well approximated by the three parametric model~\eqref{vyhlaz}, then the five parametric SHPs representation potentially leads to overparametrization and makes the model non-identifiable, which is already a well known issue, see e.g.~\citep{bellman1970}.  
 
 
 
@@ -441,6 +444,14 @@ If $r_f > 0$, then the nonlinear problem represented now by~\eqref{matice} will 
     \end{itemize}
   \end{enumerate}
   \item At this step  the vectors  of the validated inverse model solutions $\vec{p}^{i_e}$ (SHP parameter sets) are available for discussion. 
+\end{enumerate}
+
+In the second stage the unknown SHPs parameters will be reduced and the automatic calibration using the initial mesh together with the simple quasi-explicit approximation~\eqref{matice2} will proceed.
+The unknown SHPs parameters will be sequentially reduced in the following order until just a single extreme will be identified.
+\begin{enumerate}[label=({\bf \Roman*})]
+\item $S_s$ -- specific storage is often neglected for the unsaturated zone, and thus for the first unknown parameter reduction will be assigned $S_s=0\;\mbox{m}^{-1}$
+\item $\theta_s$ -- water content is often easy to measure directly, despite there are no available data for top soil layer, let's presume $\theta_s = 0.6.$
+\item $K_s$ -- if the identifiability of the inverse model will require also reduction of $K_s$, then this inverse task became inappropriate for any further analyses, and the conducted SR measurements will be declared as non-identifiable setup for SHP parameters.
 \end{enumerate}
 
 
